LaTeX Source Files

--- a/ArtificialIntelligence2CA/bibliography.bib
+++ b/ArtificialIntelligence2CA/bibliography.bib
@@ -7,4 +7,9 @@
     author="Multiple",
     title = "Asynchronous Methods for Deep Reinforcement Learning",
     url = "https://arxiv.org/pdf/1602.01783.pdf"
+},
+@misc{DQNPaper,
+    author="Multiple",
+    title = "Human-Level Control Through Deep Reinforcement Learning",
+    url = "https://storage.googleapis.com/deepmind-media/dqn/DQNNaturePaper.pdf"
 }
